fix: bug in svg that disappeared, and removed white spaces from the home page

--- a/src/app/components/card-template/card-template/card-template.component.scss
+++ b/src/app/components/card-template/card-template/card-template.component.scss
@@ -79,9 +79,12 @@
     font-size: 16px;
     font-weight: 500;
     color: #222;
+    margin-right: 5px;
 }
 
 .btn__read__more > svg{
+    width: 26px;
+    height: 26px;
     position: relative;
     top: 1px;
 }
